--- a/templates/vinculacion/catalogoDeEmpresas.html
+++ b/templates/vinculacion/catalogoDeEmpresas.html
@@ -106,6 +106,10 @@
                             <input class="form-control" type="file" id="archivo" name="archivo" required accept=".pdf,.doc,.docx,.xlsx,.xls">
                             <br>
                         </div>
+                        <div class="form-group">
+                            <label>Descripcion del archivo</label>
+                            <input type="text" class="form-control" id="descripcion" name="descripcion" required>
+                        </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button type="submit" class="btn btn-primary">Subir Archivo</button>
