--- a/templates/vinculacion/catalogoDeEmpresas.html
+++ b/templates/vinculacion/catalogoDeEmpresas.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="{{ url_for('static', filename='js/alerts.js') }}"></script>
+    
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/files.css') }}">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -80,10 +81,11 @@
                             <p class="card-text">{{archivo.descripcion}}<p>
                             
                             {% if archivo.extension == 'pdf' %}
-                            <a class="btn btn-info" data-toggle="modal" data-target="#pdfModal" onclick="loadPDF('{{ archivo._id }}')"><i class="bi bi-eye-fill"></i> Ver</a>
+                            <a class="btn btn-info btn-sm" data-toggle="modal" data-target="#pdfModal" onclick="loadPDF('{{ archivo._id }}')"><i class="bi bi-eye-fill"></i> Ver</a>
                             {% endif %}
                             <input type="hidden" value="{{archivo._id}}" id="archivo_id">
-                            <a href="{{ url_for('descargar_archivo', archivo_id=archivo._id) }}" class="btn btn-success"><i class="bi bi-download"></i> Descargar</a> 
+                            <a href="{{ url_for('descargar_archivo', archivo_id=archivo._id) }}" class="btn btn-success btn-sm"><i class="bi bi-download"></i> Descargar</a> 
+                            <a href="{{ url_for('Eliminar_archivo', archivo_id=archivo._id) }}" class="btn btn-danger btn-delete btn-sm"><i class="bi bi-trash3"></i> Eliminar</a>
 
                         </div>   
                     </div>
@@ -145,7 +147,7 @@
       document.getElementById('pdfFrame').src = `/Catalago_De_Empresas/ver/${pdfId}/`;
     }
   </script>
-
+    <script src="{{ url_for('static', filename='js/borrar.js') }}"></script>
 </body>
 
 </html>
