--- a/templates/vinculacion/administrarAlumn.html
+++ b/templates/vinculacion/administrarAlumn.html
@@ -231,7 +231,7 @@
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="editarModalLabel">Editar Alumno</h1>
+                                            <h1 class="modal-title fs-5" id="editarModalLabel">Asginar Control de Estadia</h1>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
@@ -246,7 +246,7 @@
                                                     <input type="text" class="form-control" value="{{alumno.matricula}}" id="matricula_Alum" name="matricula_Alum" minlength="9" readonly>
                                                 </div>
                                                 <div class="form-group">
-                                                    <label for="seguimiento_estadia">Seguimiento de estadia del Alumno</label>
+                                                    <label for="seguimiento_estadia">Control de estadia del Alumno</label>
                                                     <input type="text" class="form-control" id="seguimiento_alumno" name="seguimiento_alumno" required>
                                                 </div>
                                                 
@@ -254,7 +254,7 @@
                                                 <div class="modal-footer">
                                                     <input type="hidden" name="idAlumno" value="{{alumno._id }}">
                                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                    <button type="submit" class="btn btn-primary">Guardar asignación de estadía</button>
+                                                    <button type="submit" class="btn btn-primary">Guardar Control de estadía</button>
                                                 </div>
                                             </form>
                                         </div>
