--- a/templates/vinculacion/validarAlumno.html
+++ b/templates/vinculacion/validarAlumno.html
@@ -94,6 +94,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ alumno.nombreAlumno }} {{ alumno.apellidosAlumno }}</h5>
                         <p class="card-text">Matrícula: {{ alumno.matricula }}</p>
+                        <p class="card-text">Control de estadia: {{ alumno.seguimiento_estadia }}</p>
                         <p class="card-text">Correo: {{ alumno.correoAlumno }}</p>
                         <p class="card-text" id="carrera">Carrera: {{ alumno.NombreCarrera }}</p>
                         <p class="card-text" id="grupo">Grupo: {{ alumno.grupo }}</p>
